--- a/index.html
+++ b/index.html
@@ -6,5 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div id="logo">
+        <a href="index.html"><img src="assets/Logo.svg" /></a>
+      </div>
+      <article id="art_video_bg">
+        <h1>Your goal is our mission</h1>
+        <h2>All the training you need</h2>
+        <p>
+          Learn how to achieve your goals faster with Me-Mover. Whether you are
+          a runner, love biking, or want to become stronger and more flexible
+          for your yoga practice. But most importantly, don't forget to have fun
+          while you get there.
+        </p>
+        <div id="main_buttons">
+          <button id="watch_video">Watch video</button>
+          <button id="try_memover">Try Me-Mover</button>
+        </div>
+      </article>
+      <div id="arrow_icon"><img src="assets/arrow_icon.svg" /></div>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
