add me mover benefits

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div id="logo">
-        <a href="index.html"><img src="assets/Logo.svg" /></a>
+        <a href="index.html"><img src="assets/Logo.svg" alt="logo" /></a>
       </div>
       <article id="art_video_bg">
         <h1>Your goal is our mission</h1>
@@ -25,9 +25,54 @@
           <button id="try_memover">Try Me-Mover</button>
         </div>
       </article>
-      <div id="arrow_icon"><img src="assets/arrow_icon.svg" /></div>
+      <div id="arrow_icon">
+        <img src="assets/arrow_icon.svg" alt="arrow_icon" />
+      </div>
     </header>
-    <main></main>
+    <main>
+      <article class="memover_benefits">
+        <section>
+          <h3>Balance, core and condition workout</h3>
+          <p>
+            See how Me-Mover Fit can help you with your workout. Whether you are
+            a professional athlete, have injuries, want to retrain your body or
+            just want to get ahead in an effective and fun way, Me-Mover can be
+            the solution. Me-Mover provides a lower shock load than normal
+            walking and is suitable for training / rehabilitation of injuries to
+            the knees, back, hips and ankles. Me-Mover also helps build muscle
+            and strengthen joints.
+          </p>
+        </section>
+        <img src="assets/memoverfeet.png" alt="memoverfeet" />
+      </article>
+      <article class="memover_benefits">
+        <section>
+          <h3>Train outside and in group</h3>
+          <p>
+            Even though Me-Mover can also be used indoors, it has been conceived
+            for outdoors training. We know that working out is not always easy.
+            Lack of motivation is one of the reasons why many people cannot
+            stick to a fitness routine. But Me-Mover is all about having fun. A
+            unique experience that can be shared to make it even more
+            interesting.
+          </p>
+        </section>
+        <img src="assets/twomenonmemover.png" alt="twomenonmemover" />
+      </article>
+      <article class="memover_benefits">
+        <section>
+          <h3>Tested by experts</h3>
+          <p>
+            Me-Mover has been tested by experts and the results conclude that
+            training with Me-Mover has a significant positive impact. Me-Mover
+            is: - Gentle with the joints. - Effective when it comes to weight
+            loss. - The best way to improve your balance, stability and
+            coordination.
+          </p>
+        </section>
+        <img src="assets/womanonmemover.png" alt="womanonmemover" />
+      </article>
+    </main>
     <footer></footer>
   </body>
 </html>
