--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </section>
         <img src="assets/memoverfeet.png" alt="memoverfeet" />
       </article>
-      <article class="memover_benefits">
+      <article class="memover_benefits2">
         <section>
           <h3>Train outside and in group</h3>
           <p>
@@ -71,6 +71,178 @@
           </p>
         </section>
         <img src="assets/womanonmemover.png" alt="womanonmemover" />
+      </article>
+      <article id="why_memover">
+        <section>
+          <h3 id="why_memover_h3">Why Me-Mover?</h3>
+          <p>
+            Whether you're struggling to achieve your fitness goals, are always
+            ready to try new experiences or need a sports practice that's more
+            gentle with your body, Me-Mover is what you're looking for. It
+            offers you a revolutionary, incredibly effective and fun experience.
+            It sounds too good to be true, but you will only need to try it once
+            to agree with us.
+          </p>
+        </section>
+        <section>
+          <div class="icons_wrapper">
+            <div class="icon"><img src="assets/build_muscle.svg" /></div>
+            <div class="description_wrapper">
+              <div class="icon_title">Build muscle</div>
+              <div class="icon_description">
+                Become stronger with only 20 minutes of high intensity Me-Mover
+                exercise a day.
+              </div>
+            </div>
+          </div>
+          <div class="icons_wrapper">
+            <div class="icon"><img src="assets/joints_icon.svg" /></div>
+            <div class="description_wrapper">
+              <div class="icon_title">Strengthen the joints</div>
+              <div class="icon_description">
+                Protect your body while you exercise and gain strength and
+                flexibility in your joints.
+              </div>
+            </div>
+          </div>
+          <div class="icons_wrapper">
+            <div class="icon"><img src="assets/loseweight_icon.svg" /></div>
+            <div class="description_wrapper">
+              <div class="icon_title">Lose wheight</div>
+              <div class="icon_description">
+                If the scale is the problem, a frequent medium-low intensity
+                practice with Me-Mover will help you in only a few weeks.
+              </div>
+            </div>
+          </div>
+          <div class="icons_wrapper">
+            <div class="icon"><img src="assets/balance_icon.svg" /></div>
+            <div class="description_wrapper">
+              <div class="icon_title">Improve balance and coordination</div>
+              <div class="icon_description">
+                Our experts can help you build a routine to improve your balance
+                and coordination significantly with Me-Mover.
+              </div>
+            </div>
+          </div>
+        </section>
+      </article>
+      <article id="shop_bg">
+        <button id="shop_btn">Shop</button>
+      </article>
+      <article id="stories">
+        <img src="assets/woman.png" alt="woman" />
+        <section>
+          <h3>Success stories</h3>
+          <p>
+            See how Me-Mover can help you with your workout. Whether you are
+            eager to lose weight, want to improve your times when running or
+            need a cardio workout that keeps you motivated.
+          </p>
+          <button id="learn_more">Learn more</button>
+        </section>
+      </article>
+      <article id="rent_bg">
+        <section>
+          <h3>Rent a Me-Mover</h3>
+          <p>
+            You can rent a Me-Mover for both private and business use. Either if
+            you want to test Me-Mover; or if you are interested in using one or
+            more Me-Movers for your event; or if you are a physiotherapist and
+            want to use Me-Mover with your clients… Know that you can rent
+            Me-Mover for a shorter or longer period.
+          </p>
+          <button id="more_about">More about</button>
+        </section>
+      </article>
+      <article id="faq">
+        <section>
+          <div class="icons_wrapper">
+            <div class="icon"><img src="assets/shipping_icon.svg" /></div>
+            <div class="description_wrapper">
+              <div class="icon_title">World wide Shipping</div>
+              <div class="icon_description">
+                Get a Me-Mover no matter where you are.
+              </div>
+            </div>
+          </div>
+          <div class="icons_wrapper">
+            <div class="icon"><img src="assets/satisfaction_icon.svg" /></div>
+            <div class="description_wrapper">
+              <div class="icon_title">30-Day Satisfaction Guarantee</div>
+              <div class="icon_description">
+                If you're not satisfied after trying Me-Mover, you have 30 days
+                to return it.
+              </div>
+            </div>
+          </div>
+          <div class="icons_wrapper">
+            <div class="icon"><img src="assets/asseble_icon.svg" /></div>
+            <div class="description_wrapper">
+              <div class="icon_title">EASY TO ASSEMBLE</div>
+              <div class="icon_description">
+                Fold it and travel with your Me-Mover to that exact place you
+                want to try it in.
+              </div>
+            </div>
+          </div>
+        </section>
+        <section>
+          <h3>Have questions? We’ve got the answers.</h3>
+          <p>
+            If you're interested in learning more about Me-Mover or have
+            specific questions, check our "frequent asked questions" section.
+            Almost everything you can learn about Me-Mover is there. And if it's
+            not, you can always contact us. We will be happy to help you.
+          </p>
+          <button id="view_faq">View faqs</button>
+        </section>
+      </article>
+      <article id="reviews">
+        <h2>Hear from our costumers</h2>
+        <div id="review_wrapper">
+        <section class="review">
+          <div class="stars"><img src="assets/4_stars.svg" /></div>
+          <div class="review_title">I feel more energetic</div>
+          <div class="review_text">
+            I started using Me-Mover a few months ago, and I'm more motivated
+            than ever to go out and exercise. 
+          <div class="review_name">ANNA L. </div>
+        </section>
+        <section class="review">
+          <div class="stars"><img src="assets/5_stars.svg" /></div>
+          <div class="review_title">I can finally train outdoors</div>
+          <div class="review_text">
+            I had a back injury and couldn't run or bike without pain. Walking wasn't enough for me, so Me-Mover has given me back the joy of training. 
+          <div class="review_name">JULIAN S. </div>
+        </section>
+        <section class="review">
+          <div class="stars"><img src="assets/4_stars.svg" /></div>
+          <div class="review_title">Never touched the treadmill 
+            ever since</div>
+          <div class="review_text">
+            I hated cardio until I tried Me-Mover. Now I always reserve one of my training days to go outside and ride my Me-Mover .
+          <div class="review_name">JANNA H. </div>
+        </section>
+      </div>
+      <button id="view_all">View all</button>
+      </article>
+      <article id="communities">
+        <section>
+          <h3>Me-Mover communities</h3>
+      <p>Me-Mover is an innovative and effective way of training, but it's much more than that. When you get a Me-Mover you become part of a community of health and movement lovers that will support you in your journey to become a better version of yourself.</p>
+      <button id="explore_community">Explore our community</button>
+        </section>
+        <section>
+          <div id="socialmedia_icons">
+            <img src="assets/fb_icon.svg" alt="fb_icon">
+            <img src="assets/insta_jcon.svg" alt="insta_jcon">
+            <img src="assets/yt_icon.svg" alt="yt_icon">
+            <img src="assets/linkedin_icon.svg" alt="linkedin_icon">
+            <img src="assets/twitter_icon.svg" alt="twitter_icon">
+          </div>
+          <div class="follow">FOLLOW US ON SOCIAL MEDIA</div>
+        </section>
       </article>
     </main>
     <footer></footer>
