add benefits, icons, shop bg

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
   </head>
   <body>
@@ -22,7 +23,7 @@
         </p>
         <div id="main_buttons">
           <button id="watch_video">Watch video</button>
-          <button id="try_memover">Try Me-Mover</button>
+          <button id="try_memover" class="secondary_button">Try Me-Mover</button>
         </div>
       </article>
       <div id="arrow_icon">
@@ -30,43 +31,43 @@
       </div>
     </header>
     <main>
-      <article class="memover_benefits">
-        <section>
+      <article >
+        <section class="memover_benefits">
           <h3>Balance, core and condition workout</h3>
           <p>
             See how Me-Mover Fit can help you with your workout. Whether you are
             a professional athlete, have injuries, want to retrain your body or
             just want to get ahead in an effective and fun way, Me-Mover can be
-            the solution. Me-Mover provides a lower shock load than normal
+            the solution.</p><p> Me-Mover provides a lower shock load than normal
             walking and is suitable for training / rehabilitation of injuries to
-            the knees, back, hips and ankles. Me-Mover also helps build muscle
+            the knees, back, hips and ankles.</p> <p> Me-Mover also helps build muscle
             and strengthen joints.
           </p>
         </section>
         <img src="assets/memoverfeet.png" alt="memoverfeet" />
       </article>
-      <article class="memover_benefits2">
-        <section>
+      <article >
+        <section class="memover_benefits2">
           <h3>Train outside and in group</h3>
           <p>
             Even though Me-Mover can also be used indoors, it has been conceived
-            for outdoors training. We know that working out is not always easy.
+            for outdoors training.</p><p> We know that working out is not always easy.
             Lack of motivation is one of the reasons why many people cannot
-            stick to a fitness routine. But Me-Mover is all about having fun. A
+            stick to a fitness routine.</p><p>  But Me-Mover is all about having fun. A
             unique experience that can be shared to make it even more
             interesting.
           </p>
         </section>
         <img src="assets/twomenonmemover.png" alt="twomenonmemover" />
       </article>
-      <article class="memover_benefits">
-        <section>
+      <article >
+        <section class="memover_benefits">
           <h3>Tested by experts</h3>
           <p>
             Me-Mover has been tested by experts and the results conclude that
             training with Me-Mover has a significant positive impact. Me-Mover
-            is: - Gentle with the joints. - Effective when it comes to weight
-            loss. - The best way to improve your balance, stability and
+            is:</p><p> - Gentle with the joints.</p><p> - Effective when it comes to weight
+            loss.</p><p> - The best way to improve your balance, stability and
             coordination.
           </p>
         </section>
@@ -74,12 +75,12 @@
       </article>
       <article id="why_memover">
         <section>
-          <h3 id="why_memover_h3">Why Me-Mover?</h3>
+          <h3>Why Me-Mover?</h3>
           <p>
             Whether you're struggling to achieve your fitness goals, are always
             ready to try new experiences or need a sports practice that's more
-            gentle with your body, Me-Mover is what you're looking for. It
-            offers you a revolutionary, incredibly effective and fun experience.
+            gentle with your body, Me-Mover is what you're looking for. </p><p>It
+            offers you a revolutionary, incredibly effective and fun experience.</p><p>
             It sounds too good to be true, but you will only need to try it once
             to agree with us.
           </p>
