--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   </head>
   <body>
     <header>
-      <div id="logo">
-        <a href="index.html"><img src="assets/Logo.svg" alt="logo" /></a>
-      </div>
+      
       <article id="art_video_bg">
+        <div id="logo">
+          <a href="index.html"><img src="assets/Logo.svg" alt="logo" /></a>
+        </div>
         <h1>Your goal is our mission</h1>
         <h2>All the training you need</h2>
         <p>
@@ -31,8 +32,8 @@
       </div>
     </header>
     <main>
-      <article >
-        <section class="memover_benefits">
+      <article class="memover_benefits">
+        <section >
           <h3>Balance, core and condition workout</h3>
           <p>
             See how Me-Mover Fit can help you with your workout. Whether you are
@@ -46,8 +47,8 @@
         </section>
         <img src="assets/memoverfeet.png" alt="memoverfeet" />
       </article>
-      <article >
-        <section class="memover_benefits2">
+      <article class="memover_benefits2">
+        <section >
           <h3>Train outside and in group</h3>
           <p>
             Even though Me-Mover can also be used indoors, it has been conceived
@@ -60,8 +61,8 @@
         </section>
         <img src="assets/twomenonmemover.png" alt="twomenonmemover" />
       </article>
-      <article >
-        <section class="memover_benefits">
+      <article class="memover_benefits">
+        <section >
           <h3>Tested by experts</h3>
           <p>
             Me-Mover has been tested by experts and the results conclude that
@@ -129,7 +130,9 @@
         </section>
       </article>
       <article id="shop_bg">
+        <section>
         <button id="shop_btn">Shop</button>
+      </section>
       </article>
       <article id="stories">
         <img src="assets/woman.png" alt="woman" />
@@ -157,7 +160,7 @@
         </section>
       </article>
       <article id="faq">
-        <section>
+        <section id="faq_icons">
           <div class="icons_wrapper">
             <div class="icon"><img src="assets/shipping_icon.svg" /></div>
             <div class="description_wrapper">
