finish mobile view add review some

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
     <header>
-      
       <article id="art_video_bg">
         <div id="logo">
           <a href="index.html"><img src="assets/Logo.svg" alt="logo" /></a>
@@ -24,7 +23,9 @@
         </p>
         <div id="main_buttons">
           <button id="watch_video">Watch video</button>
-          <button id="try_memover" class="secondary_button">Try Me-Mover</button>
+          <button id="try_memover" class="secondary_button">
+            Try Me-Mover
+          </button>
         </div>
       </article>
       <div id="arrow_icon">
@@ -33,43 +34,54 @@
     </header>
     <main>
       <article class="memover_benefits">
-        <section >
+        <section>
           <h3>Balance, core and condition workout</h3>
           <p>
             See how Me-Mover Fit can help you with your workout. Whether you are
             a professional athlete, have injuries, want to retrain your body or
             just want to get ahead in an effective and fun way, Me-Mover can be
-            the solution.</p><p> Me-Mover provides a lower shock load than normal
-            walking and is suitable for training / rehabilitation of injuries to
-            the knees, back, hips and ankles.</p> <p> Me-Mover also helps build muscle
-            and strengthen joints.
+            the solution.
           </p>
+          <p>
+            Me-Mover provides a lower shock load than normal walking and is
+            suitable for training / rehabilitation of injuries to the knees,
+            back, hips and ankles.
+          </p>
+          <p>Me-Mover also helps build muscle and strengthen joints.</p>
         </section>
         <img src="assets/memoverfeet.png" alt="memoverfeet" />
       </article>
       <article class="memover_benefits2">
-        <section >
+        <section>
           <h3>Train outside and in group</h3>
           <p>
             Even though Me-Mover can also be used indoors, it has been conceived
-            for outdoors training.</p><p> We know that working out is not always easy.
-            Lack of motivation is one of the reasons why many people cannot
-            stick to a fitness routine.</p><p>  But Me-Mover is all about having fun. A
-            unique experience that can be shared to make it even more
-            interesting.
+            for outdoors training.
+          </p>
+          <p>
+            We know that working out is not always easy. Lack of motivation is
+            one of the reasons why many people cannot stick to a fitness
+            routine.
+          </p>
+          <p>
+            But Me-Mover is all about having fun. A unique experience that can
+            be shared to make it even more interesting.
           </p>
         </section>
         <img src="assets/twomenonmemover.png" alt="twomenonmemover" />
       </article>
       <article class="memover_benefits">
-        <section >
+        <section>
           <h3>Tested by experts</h3>
           <p>
             Me-Mover has been tested by experts and the results conclude that
             training with Me-Mover has a significant positive impact. Me-Mover
-            is:</p><p> - Gentle with the joints.</p><p> - Effective when it comes to weight
-            loss.</p><p> - The best way to improve your balance, stability and
-            coordination.
+            is:
+          </p>
+          <p>- Gentle with the joints.</p>
+          <p>- Effective when it comes to weight loss.</p>
+          <p>
+            - The best way to improve your balance, stability and coordination.
           </p>
         </section>
         <img src="assets/womanonmemover.png" alt="womanonmemover" />
@@ -80,8 +92,13 @@
           <p>
             Whether you're struggling to achieve your fitness goals, are always
             ready to try new experiences or need a sports practice that's more
-            gentle with your body, Me-Mover is what you're looking for. </p><p>It
-            offers you a revolutionary, incredibly effective and fun experience.</p><p>
+            gentle with your body, Me-Mover is what you're looking for.
+          </p>
+          <p>
+            It offers you a revolutionary, incredibly effective and fun
+            experience.
+          </p>
+          <p>
             It sounds too good to be true, but you will only need to try it once
             to agree with us.
           </p>
@@ -131,8 +148,8 @@
       </article>
       <article id="shop_bg">
         <section>
-        <button id="shop_btn">Shop</button>
-      </section>
+          <button id="shop_btn">Shop</button>
+        </section>
       </article>
       <article id="stories">
         <img src="assets/woman.png" alt="woman" />
@@ -205,48 +222,62 @@
       <article id="reviews">
         <h2>Hear from our costumers</h2>
         <div id="review_wrapper">
-        <section class="review">
-          <div class="stars"><img src="assets/4_stars.svg" /></div>
-          <div class="review_title">I feel more energetic</div>
-          <div class="review_text">
-            I started using Me-Mover a few months ago, and I'm more motivated
-            than ever to go out and exercise. 
-          <div class="review_name">ANNA L. </div>
-        </section>
-        <section class="review">
-          <div class="stars"><img src="assets/5_stars.svg" /></div>
-          <div class="review_title">I can finally train outdoors</div>
-          <div class="review_text">
-            I had a back injury and couldn't run or bike without pain. Walking wasn't enough for me, so Me-Mover has given me back the joy of training. 
-          <div class="review_name">JULIAN S. </div>
-        </section>
-        <section class="review">
-          <div class="stars"><img src="assets/4_stars.svg" /></div>
-          <div class="review_title">Never touched the treadmill 
-            ever since</div>
-          <div class="review_text">
-            I hated cardio until I tried Me-Mover. Now I always reserve one of my training days to go outside and ride my Me-Mover .
-          <div class="review_name">JANNA H. </div>
-        </section>
-      </div>
-      <button id="view_all">View all</button>
+          <section class="review">
+            <div class="stars"><img src="assets/4_stars.svg" /></div>
+            <div class="review_title">I feel more energetic</div>
+            <div class="review_text">
+              I started using Me-Mover a few months ago, and I'm more motivated
+              than ever to go out and exercise.
+            </div>
+            <div class="review_name">ANNA L.</div>
+          </section>
+          <section class="review">
+            <div class="stars"><img src="assets/5_stars.svg" /></div>
+            <div class="review_title">I can finally train outdoors</div>
+            <div class="review_text">
+              I had a back injury and couldn't run or bike without pain. Walking
+              wasn't enough for me, so Me-Mover has given me back the joy of
+              training.
+            </div>
+            <div class="review_name">JULIAN S.</div>
+          </section>
+          <section class="review">
+            <div class="stars"><img src="assets/4_stars.svg" /></div>
+            <div class="review_title">
+              Never touched the treadmill ever since
+            </div>
+            <div class="review_text">
+              I hated cardio until I tried Me-Mover. Now I always reserve one of
+              my training days to go outside and ride my Me-Mover .
+            </div>
+            <div class="review_name">JANNA H.</div>
+          </section>
+        </div>
+        <div class="btn_wrapper">
+          <button id="view_all">View all</button>
+        </div>
       </article>
       <article id="communities">
         <section>
           <h3>Me-Mover communities</h3>
-      <p>Me-Mover is an innovative and effective way of training, but it's much more than that. When you get a Me-Mover you become part of a community of health and movement lovers that will support you in your journey to become a better version of yourself.</p>
-      <button id="explore_community">Explore our community</button>
+          <p>
+            Me-Mover is an innovative and effective way of training, but it's
+            much more than that. When you get a Me-Mover you become part of a
+            community of health and movement lovers that will support you in
+            your journey to become a better version of yourself.
+          </p>
+          <button id="explore_community">Explore our community</button>
         </section>
-        <section>
+        <div id="some">
           <div id="socialmedia_icons">
-            <img src="assets/fb_icon.svg" alt="fb_icon">
-            <img src="assets/insta_jcon.svg" alt="insta_jcon">
-            <img src="assets/yt_icon.svg" alt="yt_icon">
-            <img src="assets/linkedin_icon.svg" alt="linkedin_icon">
-            <img src="assets/twitter_icon.svg" alt="twitter_icon">
+            <img src="assets/fb_icon.svg" alt="fb_icon" />
+            <img src="assets/insta_jcon.svg" alt="insta_jcon" />
+            <img src="assets/yt_icon.svg" alt="yt_icon" />
+            <img src="assets/linkedin_icon.svg" alt="linkedin_icon" />
+            <img src="assets/twitter_icon.svg" alt="twitter_icon" />
           </div>
           <div class="follow">FOLLOW US ON SOCIAL MEDIA</div>
-        </section>
+        </div>
       </article>
     </main>
     <footer></footer>
