add first part of desktop view

--- a/index.html
+++ b/index.html
@@ -13,20 +13,28 @@
         <div id="logo">
           <a href="index.html"><img src="assets/Logo.svg" alt="logo" /></a>
         </div>
-        <h1>Your goal is our mission</h1>
-        <h2>All the training you need</h2>
-        <p>
-          Learn how to achieve your goals faster with Me-Mover. Whether you are
-          a runner, love biking, or want to become stronger and more flexible
-          for your yoga practice. But most importantly, don't forget to have fun
-          while you get there.
-        </p>
-        <div id="main_buttons">
-          <button id="watch_video">Watch video</button>
-          <button id="try_memover" class="secondary_button">
-            Try Me-Mover
-          </button>
-        </div>
+        <section>
+          <h1>Your goal is our mission</h1>
+          <h2>All the training you need</h2>
+          <p>Learn how to achieve your goals faster with Me-Mover.</p>
+          <p>
+            Whether you are a runner, love biking, or want to become stronger
+            and more flexible for your yoga practice.
+          </p>
+          <p>
+            But most importantly, don't forget to have fun while you get there.
+          </p>
+          <div id="main_buttons">
+            <div class="btn_container">
+              <button id="watch_video">Watch video</button>
+            </div>
+            <div class="btn_container">
+              <button id="try_memover" class="secondary_button">
+                Try Me-Mover
+              </button>
+            </div>
+          </div>
+        </section>
       </article>
       <div id="arrow_icon">
         <img src="assets/arrow_icon.svg" alt="arrow_icon" />
@@ -166,12 +174,12 @@
       <article id="rent_bg">
         <section>
           <h3>Rent a Me-Mover</h3>
+          <p>You can rent a Me-Mover for both private and business use.</p>
           <p>
-            You can rent a Me-Mover for both private and business use. Either if
-            you want to test Me-Mover; or if you are interested in using one or
-            more Me-Movers for your event; or if you are a physiotherapist and
-            want to use Me-Mover with your clients… Know that you can rent
-            Me-Mover for a shorter or longer period.
+            Either if you want to test Me-Mover; or if you are interested in
+            using one or more Me-Movers for your event; or if you are a
+            physiotherapist and want to use Me-Mover with your clients… Know
+            that you can rent Me-Mover for a shorter or longer period.
           </p>
           <button id="more_about">More about</button>
         </section>
@@ -213,6 +221,8 @@
           <p>
             If you're interested in learning more about Me-Mover or have
             specific questions, check our "frequent asked questions" section.
+          </p>
+          <p>
             Almost everything you can learn about Me-Mover is there. And if it's
             not, you can always contact us. We will be happy to help you.
           </p>
