--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <body>
     <header>
       <article id="art_video_bg">
+        <video id="videoBG" autoplay muted loop>
+          <source src="assets/bg-video.webm" />
+          <source src="assets/bg-video.mp4" />
+        </video>
         <div id="logo">
           <a href="index.html"><img src="assets/Logo.svg" alt="logo" /></a>
         </div>
