--- a/index.html
+++ b/index.html
@@ -162,30 +162,37 @@
 
       <article id="form">
         <section id="form-fill">
-        <h5>Try Me-Mover</h5>
-        <h6>Fill out this form if you want to try a Me-over and we will contact you later.</h6>
-        <p>
-          <label for="input__text">Name *</label><br>
-          <input id="input__text" type="text" placeholder="Enter your first and last name"/>
-        </p>
-        <p>
-          <label for="input__emailaddress">Email Address *</label><br>
-          <input
-            id="input__emailaddress"
-            type="email"
-            placeholder="Enter your email (e.g. abcd@efg.com)"
-          />
-        </p>
-        <p>
-          <label for="input__phone">Phone Number</label><br>
-          <input
-            id="input__phone"
-            type="tel"
-            placeholder="Enter your phone number (e.g. 42424242)"
-          />
-        </p>
+          <h5>Try Me-Mover</h5>
+          <h6>
+            Fill out this form if you want to try a Me-over and we will contact
+            you later.
+          </h6>
           <p>
-            <label for="select-hotspot">Hotspot *</label><br>
+            <label for="input__text">Name *</label><br />
+            <input
+              id="input__text"
+              type="text"
+              placeholder="Enter your first and last name"
+            />
+          </p>
+          <p>
+            <label for="input__emailaddress">Email Address *</label><br />
+            <input
+              id="input__emailaddress"
+              type="email"
+              placeholder="Enter your email (e.g. abcd@efg.com)"
+            />
+          </p>
+          <p>
+            <label for="input__phone">Phone Number</label><br />
+            <input
+              id="input__phone"
+              type="tel"
+              placeholder="Enter your phone number (e.g. 42424242)"
+            />
+          </p>
+          <p>
+            <label for="select-hotspot">Hotspot *</label><br />
             <select id="select">
               <optgroup label="Option Group">
                 <option>Copenhagen</option>
@@ -195,7 +202,7 @@
             </select>
           </p>
           <p>
-            <label for="select-number">Number of Me-Movers *</label><br>
+            <label for="select-number">Number of Me-Movers *</label><br />
             <select id="select">
               <optgroup label="Option Group">
                 <option>1</option>
@@ -207,15 +214,15 @@
             </select>
           </p>
           <p>
-            <label for="idd">Date *</label><br>
+            <label for="idd">Date *</label><br />
             <input type="date" id="idd" value="1970-01-01" />
           </p>
           <p>
-            <label for="idd">Time *</label><br>
+            <label for="idd">Time *</label><br />
             <input type="time" id="idd" value="00:00" />
           </p>
           <p>
-          <label for="textarea">ADDITIONAL INFORMATION</label><br>
+            <label for="textarea">ADDITIONAL INFORMATION</label><br />
             <textarea
               id="textarea"
               rows="8"
@@ -223,12 +230,8 @@
               placeholder="Enter to comment additional information on special needs or anything you want to share with us."
             ></textarea>
           </p>
-       
-          </section>
-        </article>
-
-
-
+        </section>
+      </article>
 
       <article id="shop_bg">
         <section>
