added-main-links

--- a/index.html
+++ b/index.html
@@ -30,12 +30,16 @@
           </p>
           <div id="main_buttons">
             <div class="btn_container">
-              <button id="watch_video">Watch video</button>
+              <a href="https://www.youtube.com/watch?v=9K3SB--FX4A"
+                ><button id="watch_video">Watch video</button></a
+              >
             </div>
             <div class="btn_container">
-              <button id="try_memover" class="secondary_button">
-                Try Me-Mover
-              </button>
+              <a href="#form"
+                ><button id="try_memover" class="secondary_button">
+                  Try Me-Mover
+                </button></a
+              >
             </div>
           </div>
         </section>
@@ -235,7 +239,9 @@
 
       <article id="shop_bg">
         <section>
-          <button id="shop_btn">Shop</button>
+          <a href="https://me-mover.dk/product-category/shop/"
+            ><button id="shop_btn">Shop</button></a
+          >
         </section>
       </article>
       <article id="stories">
