add lazy loading and meta description

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Me-mover campaign">
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Your goal is our mission</title>
   </head>
   <body>
     <header>
@@ -65,7 +66,7 @@
           </p>
           <p>Me-Mover also helps build muscle and strengthen joints.</p>
         </section>
-        <img src="assets/memoverfeet.png" alt="memoverfeet" />
+        <img loading=lazy src="assets/memoverfeet.png" alt="memoverfeet" />
       </article>
       <article class="memover_benefits2">
         <section>
@@ -84,7 +85,7 @@
             be shared to make it even more interesting.
           </p>
         </section>
-        <img src="assets/twomenonmemover.png" alt="twomenonmemover" />
+        <img loading=lazy src="assets/twomenonmemover.png" alt="twomenonmemover" />
       </article>
       <article class="memover_benefits">
         <section>
@@ -100,7 +101,7 @@
             - The best way to improve your balance, stability and coordination.
           </p>
         </section>
-        <img src="assets/womanonmemover.png" alt="womanonmemover" />
+        <img loading=lazy src="assets/womanonmemover.png" alt="womanonmemover" />
       </article>
       <article id="why_memover">
         <section>
@@ -248,7 +249,7 @@
         </section>
       </article>
       <article id="stories">
-        <img src="assets/woman.png" alt="woman" />
+        <img loading=lazy src="assets/woman.png" alt="woman" />
         <section>
           <h3>Success stories</h3>
           <p>
